# bookstore-api

./: Cargo.toml  docker-compose.yml
migrations/: 00001_books_table.sql
src/: main.rs
src/dtos/: book.rs
src/handlers/: books.rs
src/models/: book.rs
