[package]
name = "books-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { verion = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
futures = "0.3"
dotenv = "0.15.0"
